Implemented Gooogle Signup in Register Screen

--- a/ios/FadeBook.xcodeproj/xcshareddata/xcschemes/FadeBookFrontEnd.xcscheme
+++ b/ios/FadeBook.xcodeproj/xcshareddata/xcschemes/FadeBookFrontEnd.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "FadeBookFrontEnd.app"
-               BlueprintName = "FadeBookFrontEnd"
-               ReferencedContainer = "container:FadeBookFrontEnd.xcodeproj">
+               BuildableName = "FadeBook.app"
+               BlueprintName = "FadeBook"
+               ReferencedContainer = "container:FadeBook.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "FadeBookFrontEndTests.xctest"
-               BlueprintName = "FadeBookFrontEndTests"
-               ReferencedContainer = "container:FadeBookFrontEnd.xcodeproj">
+               BuildableName = "FadeBookTests.xctest"
+               BlueprintName = "FadeBookTests"
+               ReferencedContainer = "container:FadeBook.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "FadeBookFrontEnd.app"
-            BlueprintName = "FadeBookFrontEnd"
-            ReferencedContainer = "container:FadeBookFrontEnd.xcodeproj">
+            BuildableName = "FadeBook.app"
+            BlueprintName = "FadeBook"
+            ReferencedContainer = "container:FadeBook.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "FadeBookFrontEnd.app"
-            BlueprintName = "FadeBookFrontEnd"
-            ReferencedContainer = "container:FadeBookFrontEnd.xcodeproj">
+            BuildableName = "FadeBook.app"
+            BlueprintName = "FadeBook"
+            ReferencedContainer = "container:FadeBook.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
